Created outlay of the page, css and js working

--- a/game2.html
+++ b/game2.html
@@ -13,6 +13,96 @@
 <script src="js/scripts.js"></script>
 </head>
 <body>
-<h1>Bloody Hell</h1>
+<div class="row">Navigation</div>
+<div class="container">
+  <div class="jumbotron">Game Image!
+  </div>
+  <div class="row">
+    Download
+  </div>
+  <div class="row">
+    sign-up
+  </div>
+  <div class="row">
+    Video
+  </div>
+  <div class="row">
+    About game2
+  </div>
+  <div class="row">
+    Game features
+  </div>
+  <div class="row">
+    Hogwarts experience
+    <div class="col-md-6">
+    </div>
+        <div class="col-md-6">
+        </div>
+  </div>
+  <div class="row">
+    CHARACTER
+    <div class="col-md-6">
+    </div>
+        <div class="col-md-6">
+        </div>
+  </div>
+  <div class="row">
+    HOUSE
+    <div class="col-md-6">
+    </div>
+        <div class="col-md-6">
+        </div>
+  </div>
+  <div class="row">
+    SPELLS
+    <div class="col-md-6">
+    </div>
+        <div class="col-md-6">
+        </div>
+  </div>
+  <div class="row">
+    FRIENDSHIP
+    <div class="col-md-6">
+    </div>
+        <div class="col-md-6">
+        </div>
+  </div>
+  <div class="row">
+  Want more??
+  </div>
+  <div class="row">
+    copyrights
+  </div>
+  <div class="row">
+    CONTACT US
+  </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</div>
 </body>
 </html>
