--- a/game2.html
+++ b/game2.html
@@ -15,7 +15,7 @@
 <body>
 <div class="row">Navigation</div>
 <div class="container">
-  <div class="jumbotron">Game Image!
+  <div class="jumbotron">
   </div>
   <div class="row">
     Download
