--- a/index.html
+++ b/index.html
@@ -1,56 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Complete Bootstrap 4 Website Layout</title>
+	<title>Game Landing Page</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 	<script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
-	<link href="style.css" rel="stylesheet">
+	<link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
+
 <body>
 
-<!-- Navigation -->
+	<!-- Navigation -->
+	<nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
+		<div class="container-fluid">
+<a class="navbar-brand" href="#"> <img src="img/logo.png" alt="logo"></a>
+<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+	<span class="navbar-toggler-icon"></span>
+
+</button>
+
+		</div>
+	</nav>
+
+	<!--- Image Slider -->
 
 
-<!--- Image Slider -->
+	<!--- Jumbotron -->
 
 
-<!--- Jumbotron -->
+	<!--- Welcome Section -->
 
 
-<!--- Welcome Section -->
+	<!--- Three Column Section -->
 
 
-<!--- Three Column Section -->
+	<!--- Two Column Section -->
 
 
-<!--- Two Column Section -->
+	<!--- Fixed background -->
 
 
-<!--- Fixed background -->
+	<!--- Emoji Section -->
 
 
-<!--- Emoji Section -->
+	<!--- Meet the team -->
 
 
-<!--- Meet the team -->
+	<!--- Cards -->
 
 
-<!--- Cards -->
+	<!--- Two Column Section -->
 
 
-<!--- Two Column Section -->
+	<!--- Connect -->
 
 
-<!--- Connect -->
-
-
-<!--- Footer -->
+	<!--- Footer -->
 
 
 </body>
+
 </html>
