--- a/game3.html
+++ b/game3.html
@@ -13,7 +13,19 @@
 <body>
 <nav></nav>
 <div class="top-image">
-  <img src="img/ab.png" alt="">
+  <!-- <img src="img/ab.png" alt=""> -->
+</div>
+<div class="game-description">
+<div class="container">
+  <div class="row" id="first-row">
+    <div class="col-md-2">
+      <img src="img/cimg.jpg" alt="">
+    </div>
+    <div class="col-md-8">
+
+    </div>
+  </div>
+</div>
 </div>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
