--- a/game1.html
+++ b/game1.html
@@ -2,12 +2,15 @@
 <html lang="en">
 <head>
   <title>FIFA-18</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/game1.css" rel="stylesheet" type="text/css">
     <script src="js/jquery.js"></script>
     <script src="js/scripts.js"></script>
 </head>
-<body>
+<body  id="net">
   <div class="container">
     <h2><strong><em>FIFA-18</em></strong></h2>
     <div id="game1" class="carousel slide" data-ride="carousel">
@@ -23,40 +26,48 @@
       <div class="carousel-inner">
 
         <div class="item active">
-          <img src="img/fifa4.jpg" alt="fifa" style="width:100%;">
+          <a href="https://play.google.com/store/apps/details?id=com.ea.gp.fifamobile"><img src="img/fifa4.jpg" alt="fifa" style="width:100%;"></a>
           <div class="carousel-caption">
             <h3><em>FIFA-18</em> </h3>
-            <p>FIFA-18 is always so much fun!</p>
-          </div>
-        </div>
-
-        <!-- <div class="item">
-          <img src="chicago.jpg" alt="Chicago" style="width:100%;">
-          <div class="carousel-caption">
-            <h3>Chicago</h3>
-            <p>Thank you, Chicago!</p>
+            <p>EXPERIENCE THE 2018 FIFA WORLD CUP™ RUSSIA</p>
           </div>
         </div>
 
         <div class="item">
-          <img src="ny.jpg" alt="New York" style="width:100%;">
+          <a href="https://play.google.com/store/apps/details?id=com.ea.gp.fifamobile"><img src="img/fifa1.jpg" alt="fifa glory" style="width:100%;"></a>
+
           <div class="carousel-caption">
-            <h3>New York</h3>
-            <p>We love the Big Apple!</p>
+            <h3><em>fifa items</em></h3>
+            <p>Take on thrilling matches that drop you into your offensive possessions with VS Attack mode.</p>
           </div>
         </div>
 
+        <div class="item">
+          <a href="https://play.google.com/store/apps/details?id=com.ea.gp.fifamobile"><img src="img/fifa2.jpg" alt="build your team"" style="width:100%;"></a>
+          <div class="carousel-caption">
+            <h3><em>BUILD YOUR ULTIMATE TEAM</em></h3>
+            <p>Develop the most competitive squad when you choose any 11 players from over 550 real teams, </p>
+          </div>
+        </div>
+        <div class="item">
+          <a href="https://play.google.com/store/apps/details?id=com.ea.gp.fifamobile"><img src="img/fifa.jpeg" alt="build your team"" style="width:100%;"></a>
+
+          <div class="carousel-caption">
+            <h3><em>Play through unique modes and maps</em></h3>
+            <p> Test your skills in single-player Campaign mode</p>
+          </div>
+        </div>
       </div>
 
       <!-- Left and right controls -->
-      <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+      <a class="left carousel-control" href="#game1" data-slide="prev">
         <span class="glyphicon glyphicon-chevron-left"></span>
         <span class="sr-only">Previous</span>
       </a>
-      <a class="right carousel-control" href="#myCarousel" data-slide="next">
+      <a class="right carousel-control" href="#game1" data-slide="next">
         <span class="glyphicon glyphicon-chevron-right"></span>
         <span class="sr-only">Next</span>
-      </a> -->
+      </a>
     </div>
   </div>
 
