embeded video, added email subscription

--- a/game2.html
+++ b/game2.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,101 +9,98 @@
   <link rel="stylesheet" href="css/game2.css">
   <title>Harry Potter</title>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
-<script src="js/scripts.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
+  <script src="js/scripts.js"></script>
 </head>
+
 <body>
-<div class="row">Navigation</div>
-<div class="container">
-  <div class="jumbotron">
-  </div>
-  <div class="row">
-    Download
-  </div>
-  <div class="row">
-    sign-up
-  </div>
-  <div class="row">
-    Video
-  </div>
-  <div class="row">
-    About game2
-  </div>
-  <div class="row">
-    Game features
-  </div>
-  <div class="row">
-    Hogwarts experience
-    <div class="col-md-6">
+  <div class="row">Navigation</div>
+  <div class="container">
+    <div class="jumbotron">
     </div>
-        <div class="col-md-6">
-        </div>
-  </div>
-  <div class="row">
-    CHARACTER
-    <div class="col-md-6">
+    <div class="row">
+      <h1>A New Harry Potter Mobile Game<p align="center">
+AVAILABLE NOW</h1>
+      <p>
+        <img src="img/applestore.jpg" alt="download on apple store" align="center">
+        <img src="img/googleplaystore.jpg" alt="download on google play store" align="center">
     </div>
-        <div class="col-md-6">
-        </div>
-  </div>
-  <div class="row">
-    HOUSE
-    <div class="col-md-6">
+    <div class="row">
+      <form>
+        <p> Sign up here <input type="text" name="email" value="" align="center">
+          <button>SUBMIT</button></p>
+      </form>
+      <p>You've been invited to receive news and updates about the Harry Potter: Hogwarts Mystery mobile game up to and beyond the release.
+        <p>
     </div>
-        <div class="col-md-6">
-        </div>
-  </div>
-  <div class="row">
-    SPELLS
-    <div class="col-md-6">
+    <div class="row" align="center">
+      <iframe width="750" height="450" src="https://www.youtube.com/embed/ehixbGzOZ_M" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen align="center"></iframe>
     </div>
-        <div class="col-md-6">
-        </div>
-  </div>
-  <div class="row">
-    FRIENDSHIP
-    <div class="col-md-6">
+    <div class="row">
+      <p>What Is
+Harry Potter: Hogwarts Mystery?
+Harry Potter: Hogwarts Mystery is the first game in which players can create their own character and experience life as a Hogwarts student. The game will launch under Portkey Games, from Warner Bros. Interactive Entertainment, the games label dedicated to creating new Wizarding World mobile and video game experiences that place the player at the centre of their own adventure, inspired by J.K. Rowling’s original stories.</p>
     </div>
-        <div class="col-md-6">
-        </div>
+    <div class="row">
+    <p>Game Features</p>
+    </div>
+    <div class="row">
+      Hogwarts experience
+      <div class="col-md-6">
+        <img src="img/hogwarts.jpg" alt="hogwarts school">
+      </div>
+      <div class="col-md-6">
+      </div>
+    </div>
+    <div class="row">
+      CHARACTER
+      <div class="col-md-6">
+      </div>
+      <div class="col-md-6">
+      </div>
+    </div>
+    <div class="row">
+      HOUSE
+      <div class="col-md-6">
+      </div>
+      <div class="col-md-6">
+      </div>
+    </div>
+    <div class="row">
+      SPELLS
+      <div class="col-md-6">
+      </div>
+      <div class="col-md-6">
+      </div>
+    </div>
+    <div class="row">
+      FRIENDSHIP
+      <div class="col-md-6">
+      </div>
+      <div class="col-md-6">
+      </div>
+    </div>
+    <div class="row">
+      Want more??
+    </div>
+    <div class="row">
+      copyrights
+    </div>
+    <div class="row">
+      CONTACT US
+    </div>
+
+
+
+
+
+
+
+
+
+
   </div>
-  <div class="row">
-  Want more??
-  </div>
-  <div class="row">
-    copyrights
-  </div>
-  <div class="row">
-    CONTACT US
-  </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-</div>
 </body>
+
 </html>
