--- a/game1.html
+++ b/game1.html
@@ -12,7 +12,7 @@
 </head>
 <body  id="net">
   <div class="container">
-    <h2><strong><em>FIFA-18</em></strong></h2>
+    <h2><strong><em class="fifa">FIFA-18</em></strong></h2>
     <div id="game1" class="carousel slide" data-ride="carousel">
       <!-- Indicators -->
       <ol class="carousel-indicators">
@@ -69,6 +69,13 @@
         <span class="sr-only">Next</span>
       </a>
     </div>
+    <br>
+    <div class="about">
+      <h1>A New FIFA-18 Mobile Game</h1>
+    </div>
+      <p id="about">
+        The 2018 FIFA World Cup™ has arrived to FIFA Mobile! If you’re new to FIFA Mobile, start building and managing your team with Cristiano Ronaldo as the star. Then train any player to superstar status, attack opponents, and keep coming back for daily content all season long. Whether you’re a savvy veteran, just starting out on the pitch, or ready for FIFA World Cup™ competition, FIFA Mobile is your source for soccer.
+      </p>
   </div>
 
 
