add game features

--- a/game3.html
+++ b/game3.html
@@ -11,23 +11,49 @@
 </head>
 
 <body>
-<nav></nav>
-<div class="top-image">
-  <!-- <img src="img/ab.png" alt=""> -->
-</div>
-<div class="game-description">
-<div class="container">
-  <div class="row" id="first-row">
-    <div class="col-md-2">
-      <img src="img/cimg.jpg" alt="">
-    </div>
-    <div class="col-md-8">
-
+  <nav></nav>
+  <div class="top-image">
+    <a href="#"><button><ion-icon name="arrow-down"></ion-icon>DOWNLOAD</button></a>
+  </div>
+  <div class="game-description">
+    <div class="container">
+      <div class="row" id="first-row">
+        <div class="col-md-2">
+          <img src="img/cimg.jpg" alt="">
+        </div>
+        <div class="col-md-8">
+          <h1>ANGRY BIRDS</h1>
+          <p>The survival of the Angry Birds is at stake. Dish out revenge on the greedy pigs who stole their eggs. Use the unique powers of each bird to destroy the pigs’ defenses. Angry Birds features challenging physics-based gameplay and hours of replay
+            value. Each level requires logic, skill and force to solve.</p>
+        </div>
+      </div>
+      <div class="row" id="second-row">
+        <div class="col-md-2">
+          <img src="img/android.png" alt="">
+          <img src="img/app-store-logo.png" alt="">
+        </div>
+        <div class="col-md-8">
+          <p>Download Angry Birds at the App Store or Google Play for free today</p>
+        </div>
+      </div>
+      <div class="row" id="third-row">
+        <div class="col-md-2">
+          <img src="img/amazon.png" alt="">
+        </div>
+        <div class="col-md-8">
+          <h3>Features</h3>
+          <ul>
+            <li>Never-ending fun with dozens of unique levels</li>
+            <li>Fun and easy to learn, but a challenging game to master</li>
+            <li>Float your way through fantastical islands</li>
+            <li>Compatible for iPhone or Android!</li>
+          </ul>
+        </div>
+      </div>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/hqBT05dqmKc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
   </div>
-</div>
-</div>
-
+  <script src="https://unpkg.com/ionicons@4.2.4/dist/ionicons.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
