Content on web page added

--- a/game2.html
+++ b/game2.html
@@ -6,7 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/game2.css">
+
   <title>Harry Potter</title>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
@@ -23,8 +25,7 @@
       <h1>A New Harry Potter Mobile Game<p align="center">
 AVAILABLE NOW</h1>
       <p>
-        <img src="img/applestore.jpg" alt="download on apple store" align="center">
-        <img src="img/googleplaystore.jpg" alt="download on google play store" align="center">
+        <img src="img/applestore.jpg" alt="download on apple store" align="center"><img src="img/googleplaystore.jpg" alt="download on google play store" align="center">
     </div>
     <div class="row">
       <form>
@@ -38,54 +39,72 @@ AVAILABLE NOW</h1>
       <iframe width="750" height="450" src="https://www.youtube.com/embed/ehixbGzOZ_M" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen align="center"></iframe>
     </div>
     <div class="row">
-      <p>What Is
-Harry Potter: Hogwarts Mystery?
-Harry Potter: Hogwarts Mystery is the first game in which players can create their own character and experience life as a Hogwarts student. The game will launch under Portkey Games, from Warner Bros. Interactive Entertainment, the games label dedicated to creating new Wizarding World mobile and video game experiences that place the player at the centre of their own adventure, inspired by J.K. Rowling’s original stories.</p>
+      <p>What Is Harry Potter: Hogwarts Mystery? Harry Potter: Hogwarts Mystery is the first game in which players can create their own character and experience life as a Hogwarts student. The game will launch under Portkey Games, from Warner Bros. Interactive
+        Entertainment, the games label dedicated to creating new Wizarding World mobile and video game experiences that place the player at the centre of their own adventure, inspired by J.K. Rowling’s original stories.</p>
     </div>
     <div class="row">
-    <p>Game Features</p>
+      <p>Game Features</p>
     </div>
     <div class="row">
-      Hogwarts experience
       <div class="col-md-6">
         <img src="img/hogwarts.jpg" alt="hogwarts school">
       </div>
       <div class="col-md-6">
+        <p>Live your Hogwarts Experience Get ready to begin your Hogwarts story where you will be able to attend Hogwarts School of Witchcraft and Wizardry! Progress as a student through all seven years at Hogwarts, and learn to master everything from flying,
+          Transfiguration, potion brewing and more!</p>
       </div>
     </div>
     <div class="row">
-      CHARACTER
       <div class="col-md-6">
+        <p>Customize Your Character Create your own in-game character as a Hogwarts student with our avatar creator! From hairstyle to casual outfits worn outside classes, you can customize the details of your character.</p>
       </div>
       <div class="col-md-6">
-      </div>
-    </div>
-    <div class="row">
-      HOUSE
-      <div class="col-md-6">
-      </div>
-      <div class="col-md-6">
+        <img src="img/owned.jpg" alt="hogwarts school">
       </div>
     </div>
     <div class="row">
-      SPELLS
       <div class="col-md-6">
+        <img src="img/whichhouse.jpg" alt="hogwarts school">
       </div>
       <div class="col-md-6">
-      </div>
-    </div>
-    <div class="row">
-      FRIENDSHIP
-      <div class="col-md-6">
-      </div>
-      <div class="col-md-6">
+        <p>Choose Your Hogwarts House Are you a brave Gryffindor, an ambitious Slytherin, a witty Ravenclaw, or a loyal Hufflepuff? In Harry Potter: Hogwarts Mystery, you will be able to select the house you feel you most identify with.</p>
       </div>
     </div>
     <div class="row">
-      Want more??
+      <div class="col-md-6">
+        <p>Learn New Spells & Potions Attend classes at Hogwarts and learn to cast spells, brew potions and more! Brew potions under Professor Snape’s critical eye, master Transfiguration with Professor McGonagall, and learn Charms from the esteemed Professor
+          Flitwick. This is your chance to finally become the witch or wizard you aspire to be!
+        </p>
+      </div>
+      <div class="col-md-6">
+        <img src="img/spells.jpg" alt="hogwarts school">
+      </div>
     </div>
     <div class="row">
-      copyrights
+      <div class="col-md-6">
+        <img src="img/friends1.jpg" alt="hogwarts school">
+      </div>
+      <div class="col-md-6">Create Lasting Friendships
+Throughout your journey at Hogwarts, you will meet many new and familiar faces, such as Bill Weasley and Nymphadora Tonks. Bond with your housemates and fellow students, compete for the House Cup, and go on exciting quests and adventures!
+      </div>
+    </div>
+    <div class="row">
+      <p>Want More Content on
+Harry Potter: Hogwarts Mystery?
+Follow us on:
+<a href="#" class="fa fa-facebook"></a>    <a href="#" class="fa fa-twitter"></a>    <a href="#" class="fa fa-instagram"></a>
+     </p>
+    </div>
+    <div class="row">
+      <div class="col-md-2"><img src="img/wizard.jpg" alt="Wizard World"></div>
+      <div class="col-md-2"><img src="img/jamcity.jpg" alt="Jam city"></div>
+      <div class="col-md-4"><p id="small">* By entering my email address I agree to the Terms of Service and Privacy Policy.</p>
+<p>
+HARRY POTTER: HOGWARTS MYSTERY software © 2018 Jam City, Inc. Developed by Jam City. Jam City® and the Jam City Logo are registered and/or unregistered trademarks of Jam City, Inc. WIZARDING WORLD, HARRY POTTER and FANTASTIC BEASTS Publishing Rights © J.K. Rowling. PORTKEY GAMES, HARRY POTTER: HOGWARTS MYSTERY, WIZARDING WORLD, HARRY POTTER and FANTASTIC BEASTS characters, names and related indicia © and ™ Warner Bros. Entertainment Inc. All Rights Reserved.</p>
+
+ WBIE LOGO, WB SHIELD:™ & © Warner Bros. Entertainment Inc.</p></div>
+      <div class="col-md-2"><img src="img/wb.jpg" alt=""></im></div>
+      <div class="col-md-2"><img src="img/portkey.jpg" alt="">/div>
     </div>
     <div class="row">
       CONTACT US
