--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </button>
 <div class="collapse navbar-collapse" id="navbarResponsive">
 	<ul class="navbar-nav ml-auto">
-		<li class="nav-item">
+		<li class="nav-item active">
 			<a class="nav-link" href="#">Home</a>
 		</li>
 		<li class="nav-item">
@@ -44,7 +44,21 @@
 	</nav>
 
 	<!--- Image Slider -->
+<div id="slides" class="carousel slide" data-ride="carousel">
+	<ul class="carousel-indicators">
+		<li data-target="#slides" data-slide-to="0" class="active"></li>
+		<li data-target="#slides" data-slide-to="0"></li>
+		<li data-target="#slides" data-slide-to="0"></li>
+	</ul>
+	<div class="carousel-inner">
+		<div class="carousel-item">
+			<img src="img/" alt="">
 
+		</div>
+
+	</div>
+
+</div>
 
 	<!--- Jumbotron -->
 
