--- a/index.html
+++ b/index.html
@@ -47,13 +47,35 @@
 <div id="slides" class="carousel slide" data-ride="carousel">
 	<ul class="carousel-indicators">
 		<li data-target="#slides" data-slide-to="0" class="active"></li>
-		<li data-target="#slides" data-slide-to="0"></li>
-		<li data-target="#slides" data-slide-to="0"></li>
+		<li data-target="#slides" data-slide-to="1"></li>
+		<li data-target="#slides" data-slide-to="2"></li>
+		<li data-target="#slides" data-slide-to="3"></li>
+		<li data-target="#slides" data-slide-to="4"></li>
+		<li data-target="#slides" data-slide-to="5"></li>
+		<li data-target="#slides" data-slide-to="6"></li>
+
 	</ul>
 	<div class="carousel-inner">
-		<div class="carousel-item">
-			<img src="img/" alt="">
-
+		<div class="item active">
+			<img src="img/carousel/bannerab.jpg" alt="angrybirds" style="width:100%;">
+		</div>
+		<div class="item">
+			<img src="img/carousel/bannerfifa.jpg" alt="angrybirds" style="width:100%;">
+		</div>
+		<div class="item">
+			<img src="img/carousel/bannersubway.jpg" alt="angrybirds" style="width:100%;">
+		</div>
+		<div class="item">
+			<img src="img/carousel/banner2k.png" alt="angrybirds" style="width:100%;">
+		</div>
+		<div class="item">
+			<img src="img/carousel/bannerclash.jpg" alt="angrybirds" style="width:100%;">
+		</div>
+		<div class="item">
+			<img src="img/carousel/bannerdrag.jpg" alt="angrybirds" style="width:100%;">
+		</div>
+		<div class="item">
+			<img src="img/carousel/bannerhp.png" alt="angrybirds" style="width:100%;">
 		</div>
 
 	</div>
