--- a/index.html
+++ b/index.html
@@ -44,43 +44,49 @@
 	</nav>
 
 	<!--- Image Slider -->
-<div id="slides" class="carousel slide" data-ride="carousel">
-	<ul class="carousel-indicators">
-		<li data-target="#slides" data-slide-to="0" class="active"></li>
-		<li data-target="#slides" data-slide-to="1"></li>
-		<li data-target="#slides" data-slide-to="2"></li>
-		<li data-target="#slides" data-slide-to="3"></li>
-		<li data-target="#slides" data-slide-to="4"></li>
-		<li data-target="#slides" data-slide-to="5"></li>
-		<li data-target="#slides" data-slide-to="6"></li>
+	<div id="slides" class="carousel slide" data-ride="carousel">
+	  <ol class="carousel-indicators">
+	    <li data-target="#slides" data-slide-to="0" class="active"></li>
+	    <li data-target="#slides" data-slide-to="1"></li>
+	    <li data-target="#slides" data-slide-to="2"></li>
+			<li data-target="#slides" data-slide-to="3"></li>
+			<li data-target="#slides" data-slide-to="4"></li>
+			<li data-target="#slides" data-slide-to="5"></li>
+			<li data-target="#slides" data-slide-to="6"></li>
 
-	</ul>
-	<div class="carousel-inner">
-		<div class="item active">
-			<img src="img/carousel/bannerab.jpg" alt="angrybirds" style="width:100%;">
-		</div>
-		<div class="item">
-			<img src="img/carousel/bannerfifa.jpg" alt="angrybirds" style="width:100%;">
-		</div>
-		<div class="item">
-			<img src="img/carousel/bannersubway.jpg" alt="angrybirds" style="width:100%;">
-		</div>
-		<div class="item">
-			<img src="img/carousel/banner2k.png" alt="angrybirds" style="width:100%;">
-		</div>
-		<div class="item">
-			<img src="img/carousel/bannerclash.jpg" alt="angrybirds" style="width:100%;">
-		</div>
-		<div class="item">
-			<img src="img/carousel/bannerdrag.jpg" alt="angrybirds" style="width:100%;">
-		</div>
-		<div class="item">
-			<img src="img/carousel/bannerhp.png" alt="angrybirds" style="width:100%;">
-		</div>
-
+	  </ol>
+	  <div class="carousel-inner" role="listbox">
+	    <div class="carousel-item active">
+	      <img class="d-block img-fluid" src="img/carousel/bannerab.jpg" alt="First slide" style="width:100%;">
+	    </div>
+	    <div class="carousel-item">
+	      <img class="d-block img-fluid" src="img/carousel/bannerfifa.jpg" alt="Second slide" style="width:100%;">
+	    </div>
+	    <div class="carousel-item">
+	      <img class="d-block img-fluid" src="img/carousel/bannersubway.jpg" alt="Third slide" style="width:100%;">
+	    </div>
+			<div class="carousel-item">
+	      <img class="d-block img-fluid" src="img/carousel/banner2k.png" alt="Third slide" style="width:100%;">
+	    </div>
+			<div class="carousel-item">
+	      <img class="d-block img-fluid" src="img/carousel/bannerdrag.jpg" alt="Third slide" style="width:100%;">
+	    </div>
+			<div class="carousel-item">
+	      <img class="d-block img-fluid" src="img/carousel/bannerclash.jpg" alt="Third slide" style="width:100%;">
+	    </div>
+			<div class="carousel-item">
+	      <img class="d-block img-fluid" src="img/carousel/bannerhp.png" alt="Third slide" style="width:100%;">
+	    </div>
+	  </div>
+	  <a class="carousel-control-prev" href="#slides" role="button" data-slide="prev">
+	    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+	    <span class="sr-only">Previous</span>
+	  </a>
+	  <a class="carousel-control-next" href="#slides" role="button" data-slide="next">
+	    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+	    <span class="sr-only">Next</span>
+	  </a>
 	</div>
-
-</div>
 
 	<!--- Jumbotron -->
 
