Two top paragraphs aligned

--- a/game2.html
+++ b/game2.html
@@ -15,29 +15,34 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
   <script src="js/scripts.js"></script>
 </head>
+<link href="https://fonts.googleapis.com/css?family=Nunito+Sans" rel="stylesheet">
 
 <body>
   <div class="row">Navigation</div>
   <div class="container">
     <div class="jumbotron">
     </div>
-    <div class="row">
-      <h1>A New Harry Potter Mobile Game<p align="center">
+    <div class="container">
+
+      <h1><p align="center">A New Harry Potter Mobile Game<p align="center">
 AVAILABLE NOW</h1>
-      <p>
-        <img src="img/applestore.jpg" alt="download on apple store" align="center"><img src="img/googleplaystore.jpg" alt="download on google play store" align="center">
-    </div>
-    <div class="row">
+      <p align="center">
+        <img src="img/applestore.jpg" alt="download on apple store" align="center"><img src="img/googleplaystore.jpg" alt="download on google play store" align="center"></p>
+
       <form>
-        <p> Sign up here <input type="text" name="email" value="" align="center">
+        <p align="center"> Sign up here <input type="text" name="email" value="" align="center">
           <button>SUBMIT</button></p>
       </form>
-      <p>You've been invited to receive news and updates about the Harry Potter: Hogwarts Mystery mobile game up to and beyond the release.
-        <p>
+      <p id="small" align="center">You've been invited to receive news and updates about the Harry Potter: Hogwarts Mystery mobile game up to and beyond the release.
+      </p>
     </div>
-    <div class="row" align="center">
-      <iframe width="750" height="450" src="https://www.youtube.com/embed/ehixbGzOZ_M" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen align="center"></iframe>
+    <div class="divider">
+    <img src="img/line.jpg" alt=""></div>
+    <div class="container">
+      <h2><p align="center">TRAILER</h2></p>
+      <iframe width="1000" height="600" src="https://www.youtube.com/embed/ehixbGzOZ_M" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen align="center"></iframe>
     </div>
+
     <div class="row">
       <p>What Is Harry Potter: Hogwarts Mystery? Harry Potter: Hogwarts Mystery is the first game in which players can create their own character and experience life as a Hogwarts student. The game will launch under Portkey Games, from Warner Bros. Interactive
         Entertainment, the games label dedicated to creating new Wizarding World mobile and video game experiences that place the player at the centre of their own adventure, inspired by J.K. Rowling’s original stories.</p>
@@ -84,27 +89,28 @@ AVAILABLE NOW</h1>
       <div class="col-md-6">
         <img src="img/friends1.jpg" alt="hogwarts school">
       </div>
-      <div class="col-md-6">Create Lasting Friendships
-Throughout your journey at Hogwarts, you will meet many new and familiar faces, such as Bill Weasley and Nymphadora Tonks. Bond with your housemates and fellow students, compete for the House Cup, and go on exciting quests and adventures!
+      <div class="col-md-6">Create Lasting Friendships Throughout your journey at Hogwarts, you will meet many new and familiar faces, such as Bill Weasley and Nymphadora Tonks. Bond with your housemates and fellow students, compete for the House Cup, and go on exciting quests
+        and adventures!
       </div>
     </div>
     <div class="row">
-      <p>Want More Content on
-Harry Potter: Hogwarts Mystery?
-Follow us on:
-<a href="#" class="fa fa-facebook"></a>    <a href="#" class="fa fa-twitter"></a>    <a href="#" class="fa fa-instagram"></a>
-     </p>
+      <p>Want More Content on Harry Potter: Hogwarts Mystery? Follow us on:
+        <a href="#" class="fa fa-facebook"></a> <a href="#" class="fa fa-twitter"></a> <a href="#" class="fa fa-instagram"></a>
+      </p>
     </div>
-    <div class="row">
-      <div class="col-md-2"><img src="img/wizard.jpg" alt="Wizard World"></div>
-      <div class="col-md-2"><img src="img/jamcity.jpg" alt="Jam city"></div>
-      <div class="col-md-4"><p id="small">* By entering my email address I agree to the Terms of Service and Privacy Policy.</p>
-<p>
-HARRY POTTER: HOGWARTS MYSTERY software © 2018 Jam City, Inc. Developed by Jam City. Jam City® and the Jam City Logo are registered and/or unregistered trademarks of Jam City, Inc. WIZARDING WORLD, HARRY POTTER and FANTASTIC BEASTS Publishing Rights © J.K. Rowling. PORTKEY GAMES, HARRY POTTER: HOGWARTS MYSTERY, WIZARDING WORLD, HARRY POTTER and FANTASTIC BEASTS characters, names and related indicia © and ™ Warner Bros. Entertainment Inc. All Rights Reserved.</p>
-
- WBIE LOGO, WB SHIELD:™ & © Warner Bros. Entertainment Inc.</p></div>
-      <div class="col-md-2"><img src="img/wb.jpg" alt=""></im></div>
-      <div class="col-md-2"><img src="img/portkey.jpg" alt="">/div>
+    <div class="row" id="row-1">
+      <div class="col-md-1"><img src="img/wizard.jpg" alt="Wizard World"></div>
+      <div class="col-md-1"><img src="img/jamcity.jpg" alt="Jam city"></div>
+      <div class="col-md-8">
+        <p id="small">* By entering my email address I agree to the Terms of Service and Privacy Policy.</p>
+        <p align="center">
+          HARRY POTTER: HOGWARTS MYSTERY software © 2018 Jam City, Inc. Developed by Jam City. Jam City® and the Jam City Logo are registered and/or unregistered trademarks of Jam City, Inc. WIZARDING WORLD, HARRY POTTER and FANTASTIC BEASTS Publishing Rights ©
+          J.K. Rowling. PORTKEY GAMES, HARRY POTTER: HOGWARTS MYSTERY, WIZARDING WORLD, HARRY POTTER and FANTASTIC BEASTS characters, names and related indicia © and ™ Warner Bros. Entertainment Inc. All Rights Reserved. WBIE LOGO, WB SHIELD:™ & © Warner
+          Bros. Entertainment Inc.</p>
+      </div>
+      <div class="col-md-1"><img src="img/wb.jpg" alt=""></im>
+      </div>
+      <div class="col-md-1"><img src="img/portkey.jpg" alt="portkey"></div>
     </div>
     <div class="row">
       CONTACT US
