--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 	</div>
 
 	<!--- Two Column Section User feeback -->
-	<div class="row">
+	<div id="support" class="row">
 
 		<div class="col-md-6">
 			<div class="jumbotron">
@@ -306,6 +306,7 @@
 					<p>Android</p>
 					<p>iOS</p>
 					<p>Windows Phone</p>
+					<p>Blackberry</p>
 
 				</div>
 				<div class="col-12">
